--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,21 @@
 version: '3'
 services:
-  companies:
+  auth-api:
     build: './auth-api'
+    container_name: nodejs-auth-api
     ports:
       - "8080:8080"
     depends_on: 
       - mongo
     environment:
-      - MONGO_URI=mongodb://mongo/upstack
+      - MONGO_URI=mongodb://mongo
   
   mongo:
     image: mongo
     ports:
       - "27017:27017"
     volumes:
-      - auth-api/mongo/data/db:/data/db
+      - "db-data:/data/db"
+
+volumes:
+  db-data:
