--- a/auth-api/package.json
+++ b/auth-api/package.json
@@ -4,16 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
-    "start": "node ./server.js"
+    "test": "docker exec -it nodejs-auth-api npx mocha --recursive  --timeout 8000 --reporter spec --exit",
+    "start": "node ./server.js",
+    "dev": "nodemon ./server.js"
   },
   "author": "Shota Jolbordi <shota.jolbordi@protonmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "express-async-errors": "^3.1.1",
     "joi": "^14.3.1",
-    "mongoose": "^5.4.6"
+    "jwt-simple": "^0.5.5",
+    "moment": "^2.24.0",
+    "mongoose": "^5.4.6",
+    "nodemailer": "^5.1.1"
   },
   "devDependencies": {
     "mocha": "^5.2.0",
